<resources>
    <string name="app_name">CV19</string>
    <string name="login">LOGIN</string>
    <string name="consiglia_viaggi_2019">Consiglia Viaggi 2019</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registrati">REGISTRATI</string>
    <string name="entra_come_guest">ENTRA COME GUEST</string>
    <string name="oppure">Oppure</string>
    <string name="non_sei_registrato_registrati">Non sei registrato? Registrati!</string>
    <string name="recupera_credenziali">Recupera credenziali</string>
    <string name="nome_struttura">Nome Struttura</string>
    <string name="inserisci_il_tuo_indirizzo_email_con_cui_ti_sei_iscritto">Inserisci il tuo indirizzo email con cui ti sei iscritto.</string>
    <string name="recupera_password">Recupera password</string>
    <string name="invia_credenziali">Invia credenziali</string>
    <string name="inserisci_email">Inserisci email</string>
    <string name="registrazione_cv19">REGISTRAZIONE CV19</string>
    <string name="nome">Nome</string>
    <string name="password_min_8_car">Password (min 8 car.)</string>
    <string name="cognome">Cognome</string>
    <string name="torna_al_login">Torna al Login</string>
    <string name="come_vuoi_che_ti_vedano_gli_altri_utenti">Come vuoi che ti vedano gli altri utenti?</string>
    <string name="nome_e_cognome">Nome e Cognome</string>
    <string name="nickname">NickName</string>
    <string name="logout">LOGOUT</string>
    <string name="schermata_principale">SCHERMATA PRINCIPALE</string>
    <string name="Email">Email</string>
    <string name="benvenuto">BENVENUTO!</string>
    <string name="dove_vuoi_andare">Dove vuoi andare?</string>
    <string name="localstructure">LocalStructure</string>
    <string name="searchstructures">SearchStructures</string>
    <string name="le_migliori_strutture">Le migliori strutture</string>
    <string name="local_structures">local_structures</string>
    <string name="search">search</string>
    <string name="voto_da_1_a_5">Voto da 1 a 5</string>
    <string name="voto">Voto</string>
    <string name="Voto">Voto:</string>
    <string name="title_activity_ricerca_per__categoria">Ricerca_per_Categoria</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sei_entrato_come_ospite">Sei entrato come ospite</string>
    <string name="registrati_per_effettuare_recensioni">Registrati per effettuare recensioni!</string>
    <string name="esci">ESCI</string>
    <string name="title_activity_map">Map</string>
    <string name="created_by_coppola_vincenzo_e_umberto_dello_iacolo">Created By Coppola Vincenzo e Umberto Dello Iacolo</string>
    <string name="le_diamo_il_benvenuto_in_consiglia_viaggi_19">Le diamo il benvenuto in Consiglia Viaggi 19</string>
    <string name="cv19">CV19</string>
    <string name="scrivi_una_recensione">Scrivi una recensione</string>
    <string name="pubblica_recensione">Pubblica Recensione!</string>
    <string name="via_vittorio_emanuele_iii_80133_napoli_na">Via Vittorio Emanuele III, 80133 Napoli NA</string>
    <string name="area_personale">Area personale</string>
</resources>